fix scrollReveal flicker

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -195,6 +195,11 @@ body.light-theme {
   background-color: hsl(var(--second-hue), 8%, 44%);
 }
 
+/* =============== SCROLLREVEAL =============== */
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 968px;
